# MOCHA

./: .gitattributes  INSTALL  Makefile.am  Makefile.in  README  README.md  TODO  acinclude.m4  config.h.in  config.status  configure  configure.ac
.coin-or/: projDesc.xml
Instances/Calibration/: README  gn10e22d2w0w100.mo  gn10e22d2w0w1000.mo  gn10e22d2w0w1000_RAT.txt  gn10e22d2w0w100_RAT.txt  gn10e22d2w0w20.mo  gn10e22d3w0w100.mo  gn10e22d3w0w1000_INT.txt  gn10e22d3w0w1000_RAT.txt  gn10e22d3w0w100_INT.txt  gn10e22d3w0w20.mo  gn10e22d3w0w20_INT.txt  gn10e22d3w0w20_RAT.txt  gn10e22d5w0w1000.mo  gn10e22d5w0w1_INT.txt  gn10e22d5w0w1_RAT.txt  gn10e22d5w0w20.mo  gn10e22d5w0w2_RAT.txt  gn10e22d5w0w5_RAT.txt  gn10e28d2w0w100.mo  gn10e28d2w0w1000.mo  gn10e28d2w0w1000_INT.txt  gn10e28d2w0w100_RAT.txt  gn10e28d2w0w20.mo  gn10e28d2w0w20_INT.txt  gn10e28d2w0w20_RAT.txt  gn10e28d3w0w1000_INT.txt  gn10e28d3w0w1000_RAT.txt  gn10e28d3w0w100_RAT.txt  gn10e28d3w0w20.mo  gn10e28d3w0w20_RAT.txt  gn10e28d5w0w10.mo  gn10e28d5w0w1_RAT.txt  gn10e28d5w0w20.mo  gn10e28d5w0w2_INT.txt  gn10e28d5w0w5_INT.txt  gn10e28d5w0w5_RAT.txt  gn10e33  gn10e33d2w0w1000_RAT.txt  gn10e33d3w0w1000.mo  (+231 more)
Instances/Examples/: k6.allprojectedbases.m  k6.boundary.m  k6.dfbfsoutput.m  k6.graph  k6.mo  k6.pivottesttabusearch.m
Instances/ExperimentalDesign/: P_20_2_4_Beta_2_9_l.mo  README
Instances/Solids/: Solid-cube  Solid-cube-d2w0w1000.mo  Solid-cube-d2w0w20.mo  Solid-cube-d3w0w100.mo  Solid-cube-d3w0w1000.mo  Solid-cuboctahedron  Solid-cuboctahedron-d2w0w100.mo  Solid-cuboctahedron-d2w0w1000.mo  Solid-cuboctahedron-d2w0w20.mo  Solid-cuboctahedron-d3w0w1000.mo  Solid-cuboctahedron-d3w0w20.mo  Solid-dodecahedron  Solid-dodecahedron-d2w0w1000.mo  Solid-dodecahedron-d2w0w20.mo  Solid-dodecahedron-d3w0w100.mo  Solid-dodecahedron-d3w0w1000.mo  Solid-grhombicuboctahedron  Solid-grhombicuboctahedron-d2w0w100.mo  Solid-grhombicuboctahedron-d2w0w20.mo  Solid-icosahedron  Solid-icosahedron-d2w0w20.mo  Solid-icosahedron-d3w0w100.mo  Solid-icosahedron-d3w0w1000.mo  Solid-icosahedron-d3w0w20.mo  Solid-icosidodecahedron  Solid-icosidodecahedron-d2w0w100.mo  Solid-icosidodecahedron-d2w0w1000.mo  Solid-icosidodecahedron-d2w0w20.mo  Solid-icosidodecahedron-d3w0w100.mo  Solid-icosidodecahedron-d3w0w1000.mo  Solid-icosidodecahedron-d3w0w20.mo  Solid-octahedron  Solid-octahedron-d2w0w1000.mo  Solid-octahedron-d3w0w20.mo  Solid-rhombicosidodecahedron  Solid-rhombicosidodecahedron-d2w0w100.mo  Solid-rhombicosidodecahedron-d2w0w1000.mo  Solid-rhombicosidodecahedron-d2w0w20.mo  Solid-rhombicosidodecahedron-d3w0w100.mo  Solid-rhombicosidodecahedron-d3w0w1000.mo  (+23 more)
MOCHA/: AUTHORS  INSTALL  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
MOCHA/Instances/Calibration/: gn10e22  gn10e22d2w0w1000_INT.txt  gn10e22d2w0w100_INT.txt  gn10e22d2w0w20_INT.txt  gn10e22d2w0w20_RAT.txt  gn10e22d3w0w1000.mo  gn10e22d3w0w100_RAT.txt  gn10e22d5w0w1.mo  gn10e22d5w0w10.mo  gn10e22d5w0w100.mo  gn10e22d5w0w2.mo  gn10e22d5w0w2_INT.txt  gn10e22d5w0w5.mo  gn10e22d5w0w5_INT.txt  gn10e28  gn10e28d2w0w1000_RAT.txt  gn10e28d2w0w100_INT.txt  gn10e28d3w0w100.mo  gn10e28d3w0w1000.mo  gn10e28d3w0w100_INT.txt  gn10e28d3w0w20_INT.txt  gn10e28d5w0w1.mo  gn10e28d5w0w100.mo  gn10e28d5w0w1000.mo  gn10e28d5w0w1_INT.txt  gn10e28d5w0w2.mo  gn10e28d5w0w2_RAT.txt  gn10e28d5w0w5.mo  gn10e33d2w0w100.mo  gn10e33d2w0w1000.mo  gn10e33d2w0w1000_INT.txt  gn10e33d2w0w100_INT.txt  gn10e33d2w0w100_RAT.txt  gn10e33d2w0w20.mo  gn10e33d2w0w20_INT.txt  gn10e33d2w0w20_RAT.txt  gn10e33d3w0w100.mo  gn10e33d3w0w1000_INT.txt  gn10e33d3w0w1000_RAT.txt  gn10e33d3w0w20_RAT.txt  (+170 more)
MOCHA/Instances/ExperimentalDesign/: P_28_2_5_Beta_2_9_l.mo
MOCHA/Instances/Solids/: Solid-cube-d2w0w100.mo  Solid-cube-d3w0w20.mo  Solid-cuboctahedron-d3w0w100.mo  Solid-dodecahedron-d2w0w100.mo  Solid-dodecahedron-d3w0w20.mo  Solid-grhombicuboctahedron-d2w0w1000.mo  Solid-grhombicuboctahedron-d3w0w100.mo  Solid-grhombicuboctahedron-d3w0w1000.mo  Solid-grhombicuboctahedron-d3w0w20.mo  Solid-icosahedron-d2w0w100.mo  Solid-icosahedron-d2w0w1000.mo  Solid-octahedron-d2w0w100.mo  Solid-octahedron-d2w0w20.mo  Solid-octahedron-d3w0w100.mo  Solid-octahedron-d3w0w1000.mo  Solid-rhombicosidodecahedron-d3w0w20.mo  Solid-snubcube-d2w0w100.mo  Solid-snubcube-d2w0w20.mo  Solid-snubcube-d3w0w20.mo  Solid-snubdodecahedron-d2w0w1000.mo  Solid-snubdodecahedron-d2w0w20.mo  Solid-snubdodecahedron-d3w0w100.mo  Solid-snubdodecahedron-d3w0w1000.mo  Solid-snubdodecahedron-d3w0w20.mo  Solid-srhombicuboctahedron-d2w0w100.mo  Solid-srhombicuboctahedron-d2w0w1000.mo  Solid-srhombicuboctahedron-d2w0w20.mo  Solid-srhombicuboctahedron-d3w0w1000.mo  Solid-tetrahedron  Solid-tetrahedron-d2w0w100.mo  Solid-tetrahedron-d2w0w1000.mo  Solid-tetrahedron-d2w0w20.mo  Solid-truncatedicosahedron-d2w0w1000.mo  Solid-truncatedicosahedron-d3w0w100.mo  Solid-truncatedicosahedron-d3w0w1000.mo  Solid-truncatedoctahedron  Solid-truncatedoctahedron-d2w0w1000.mo  Solid-truncatedoctahedron-d2w0w20.mo  Solid-truncatedoctahedron-d3w0w100.mo  Solid-truncatedtetrahedron  (+2 more)
MOCHA/src/: Makefile.am  Makefile.in  alltoproj.cpp  designtomatrix.cpp  estimatebases.cpp  genmatrix.cpp  genrandmo.cpp  graph.cpp  graph.h  graphtest.cpp  localsearch.cpp  mafyn.cpp  mathprog.cpp  mathprog.h  matrix.cpp  matrix.h  matroid.cpp  matroid.h  matroidtest.cpp  mvbalclust.cpp  nagibatest.cpp  point2po.cpp  tabusearch.cpp  testmatrix.cpp
MOCHA/test/: Makefile.am  Makefile.in  run_unitTests  run_unitTests.in  unitTestInput.txt
doxydoc/: doxygen.conf
src/: Makefile.am  Makefile.in  OLDMakefile  alltoproj.cpp  designtomatrix.cpp  estimatebases.cpp  genmatrix.cpp  genrandmo.cpp  graph.cpp  graph.h  graphtest.cpp  localsearch.cpp  mafyn.cpp  mathprog.cpp  mathprog.h  matrix.cpp  matrix.h  matroid.cpp  matroid.h  matroidtest.cpp  mvbalclust.cpp  nagibatest.cpp  point2po.cpp  tabusearch.cpp  testmatrix.cpp
