## $Rev: 313 $ $Date: 2009-09-21 21:53:43 -0400 (Mon, 21 Sep 2009) $
SUBDIRS = src
docdir = ${datadir}/doc/${PACKAGE}
dist_doc_DATA = README
EXTRA_DIST=LICENSE \
Instances/Calibration/README\
Instances/Calibration/gn10e22\
Instances/Calibration/gn10e22d2w0w100.mo\
Instances/Calibration/gn10e22d2w0w1000.mo\
Instances/Calibration/gn10e22d2w0w1000_INT.txt\
Instances/Calibration/gn10e22d2w0w1000_RAT.txt\
Instances/Calibration/gn10e22d2w0w100_INT.txt\
Instances/Calibration/gn10e22d2w0w100_RAT.txt\
Instances/Calibration/gn10e22d2w0w20.mo\
Instances/Calibration/gn10e22d2w0w20_INT.txt\
Instances/Calibration/gn10e22d2w0w20_RAT.txt\
Instances/Calibration/gn10e22d3w0w100.mo\
Instances/Calibration/gn10e22d3w0w1000.mo\
Instances/Calibration/gn10e22d3w0w1000_INT.txt\
Instances/Calibration/gn10e22d3w0w1000_RAT.txt\
Instances/Calibration/gn10e22d3w0w100_INT.txt\
Instances/Calibration/gn10e22d3w0w100_RAT.txt\
Instances/Calibration/gn10e22d3w0w20.mo\
Instances/Calibration/gn10e22d3w0w20_INT.txt\
Instances/Calibration/gn10e22d3w0w20_RAT.txt\
Instances/Calibration/gn10e22d5w0w1.mo\
Instances/Calibration/gn10e22d5w0w10.mo\
Instances/Calibration/gn10e22d5w0w100.mo\
Instances/Calibration/gn10e22d5w0w1000.mo\
Instances/Calibration/gn10e22d5w0w1_INT.txt\
Instances/Calibration/gn10e22d5w0w1_RAT.txt\
Instances/Calibration/gn10e22d5w0w2.mo\
Instances/Calibration/gn10e22d5w0w20.mo\
Instances/Calibration/gn10e22d5w0w2_INT.txt\
Instances/Calibration/gn10e22d5w0w2_RAT.txt\
Instances/Calibration/gn10e22d5w0w5.mo\
Instances/Calibration/gn10e22d5w0w5_INT.txt\
Instances/Calibration/gn10e22d5w0w5_RAT.txt\
Instances/Calibration/gn10e28\
Instances/Calibration/gn10e28d2w0w100.mo\
Instances/Calibration/gn10e28d2w0w1000.mo\
Instances/Calibration/gn10e28d2w0w1000_INT.txt\
Instances/Calibration/gn10e28d2w0w1000_RAT.txt\
Instances/Calibration/gn10e28d2w0w100_INT.txt\
Instances/Calibration/gn10e28d2w0w100_RAT.txt\
Instances/Calibration/gn10e28d2w0w20.mo\
Instances/Calibration/gn10e28d2w0w20_INT.txt\
Instances/Calibration/gn10e28d2w0w20_RAT.txt\
Instances/Calibration/gn10e28d3w0w100.mo\
Instances/Calibration/gn10e28d3w0w1000.mo\
Instances/Calibration/gn10e28d3w0w1000_INT.txt\
Instances/Calibration/gn10e28d3w0w1000_RAT.txt\
Instances/Calibration/gn10e28d3w0w100_INT.txt\
Instances/Calibration/gn10e28d3w0w100_RAT.txt\
Instances/Calibration/gn10e28d3w0w20.mo\
Instances/Calibration/gn10e28d3w0w20_INT.txt\
Instances/Calibration/gn10e28d3w0w20_RAT.txt\
Instances/Calibration/gn10e28d5w0w1.mo\
Instances/Calibration/gn10e28d5w0w10.mo\
Instances/Calibration/gn10e28d5w0w100.mo\
Instances/Calibration/gn10e28d5w0w1000.mo\
Instances/Calibration/gn10e28d5w0w1_INT.txt\
Instances/Calibration/gn10e28d5w0w1_RAT.txt\
Instances/Calibration/gn10e28d5w0w2.mo\
Instances/Calibration/gn10e28d5w0w20.mo\
Instances/Calibration/gn10e28d5w0w2_INT.txt\
Instances/Calibration/gn10e28d5w0w2_RAT.txt\
Instances/Calibration/gn10e28d5w0w5.mo\
Instances/Calibration/gn10e28d5w0w5_INT.txt\
Instances/Calibration/gn10e28d5w0w5_RAT.txt\
Instances/Calibration/gn10e33\
Instances/Calibration/gn10e33d2w0w100.mo\
Instances/Calibration/gn10e33d2w0w1000.mo\
Instances/Calibration/gn10e33d2w0w1000_INT.txt\
Instances/Calibration/gn10e33d2w0w1000_RAT.txt\
Instances/Calibration/gn10e33d2w0w100_INT.txt\
Instances/Calibration/gn10e33d2w0w100_RAT.txt\
Instances/Calibration/gn10e33d2w0w20.mo\
Instances/Calibration/gn10e33d2w0w20_INT.txt\
Instances/Calibration/gn10e33d2w0w20_RAT.txt\
Instances/Calibration/gn10e33d3w0w100.mo\
Instances/Calibration/gn10e33d3w0w1000.mo\
Instances/Calibration/gn10e33d3w0w1000_INT.txt\
Instances/Calibration/gn10e33d3w0w1000_RAT.txt\
Instances/Calibration/gn10e33d3w0w100_INT.txt\
Instances/Calibration/gn10e33d3w0w100_RAT.txt\
Instances/Calibration/gn10e33d3w0w20.mo\
Instances/Calibration/gn10e33d3w0w20_INT.txt\
Instances/Calibration/gn10e33d3w0w20_RAT.txt\
Instances/Calibration/gn10e33d5w0w1.mo\
Instances/Calibration/gn10e33d5w0w10.mo\
Instances/Calibration/gn10e33d5w0w100.mo\
Instances/Calibration/gn10e33d5w0w1000.mo\
Instances/Calibration/gn10e33d5w0w1_INT.txt\
Instances/Calibration/gn10e33d5w0w1_RAT.txt\
Instances/Calibration/gn10e33d5w0w2.mo\
Instances/Calibration/gn10e33d5w0w20.mo\
Instances/Calibration/gn10e33d5w0w2_INT.txt\
Instances/Calibration/gn10e33d5w0w2_RAT.txt\
Instances/Calibration/gn10e33d5w0w5.mo\
Instances/Calibration/gn10e33d5w0w5_INT.txt\
Instances/Calibration/gn10e33d5w0w5_RAT.txt\
Instances/Calibration/gn11e13\
Instances/Calibration/gn11e13d2w0w100.mo\
Instances/Calibration/gn11e13d2w0w1000.mo\
Instances/Calibration/gn11e13d2w0w1000_INT.txt\
Instances/Calibration/gn11e13d2w0w1000_RAT.txt\
Instances/Calibration/gn11e13d2w0w100_INT.txt\
Instances/Calibration/gn11e13d2w0w100_RAT.txt\
Instances/Calibration/gn11e13d2w0w20.mo\
Instances/Calibration/gn11e13d2w0w20_INT.txt\
Instances/Calibration/gn11e13d2w0w20_RAT.txt\
Instances/Calibration/gn11e13d3w0w100.mo\
Instances/Calibration/gn11e13d3w0w1000.mo\
Instances/Calibration/gn11e13d3w0w1000_INT.txt\
Instances/Calibration/gn11e13d3w0w1000_RAT.txt\
Instances/Calibration/gn11e13d3w0w100_INT.txt\
Instances/Calibration/gn11e13d3w0w100_RAT.txt\
Instances/Calibration/gn11e13d3w0w20.mo\
Instances/Calibration/gn11e13d3w0w20_INT.txt\
Instances/Calibration/gn11e13d3w0w20_RAT.txt\
Instances/Calibration/gn11e13d5w0w1.mo\
Instances/Calibration/gn11e13d5w0w10.mo\
Instances/Calibration/gn11e13d5w0w100.mo\
Instances/Calibration/gn11e13d5w0w1000.mo\
Instances/Calibration/gn11e13d5w0w1_INT.txt\
Instances/Calibration/gn11e13d5w0w1_RAT.txt\
Instances/Calibration/gn11e13d5w0w2.mo\
Instances/Calibration/gn11e13d5w0w20.mo\
Instances/Calibration/gn11e13d5w0w2_INT.txt\
Instances/Calibration/gn11e13d5w0w2_RAT.txt\
Instances/Calibration/gn11e13d5w0w5.mo\
Instances/Calibration/gn11e13d5w0w5_INT.txt\
Instances/Calibration/gn11e13d5w0w5_RAT.txt\
Instances/Calibration/gn11e20\
Instances/Calibration/gn11e20d2w0w100.mo\
Instances/Calibration/gn11e20d2w0w1000.mo\
Instances/Calibration/gn11e20d2w0w1000_INT.txt\
Instances/Calibration/gn11e20d2w0w1000_RAT.txt\
Instances/Calibration/gn11e20d2w0w100_INT.txt\
Instances/Calibration/gn11e20d2w0w100_RAT.txt\
Instances/Calibration/gn11e20d2w0w20.mo\
Instances/Calibration/gn11e20d2w0w20_INT.txt\
Instances/Calibration/gn11e20d2w0w20_RAT.txt\
Instances/Calibration/gn11e20d3w0w100.mo\
Instances/Calibration/gn11e20d3w0w1000.mo\
Instances/Calibration/gn11e20d3w0w1000_INT.txt\
Instances/Calibration/gn11e20d3w0w1000_RAT.txt\
Instances/Calibration/gn11e20d3w0w100_INT.txt\
Instances/Calibration/gn11e20d3w0w100_RAT.txt\
Instances/Calibration/gn11e20d3w0w20.mo\
Instances/Calibration/gn11e20d3w0w20_INT.txt\
Instances/Calibration/gn11e20d3w0w20_RAT.txt\
Instances/Calibration/gn11e20d5w0w1.mo\
Instances/Calibration/gn11e20d5w0w10.mo\
Instances/Calibration/gn11e20d5w0w100.mo\
Instances/Calibration/gn11e20d5w0w1000.mo\
Instances/Calibration/gn11e20d5w0w1_INT.txt\
Instances/Calibration/gn11e20d5w0w1_RAT.txt\
Instances/Calibration/gn11e20d5w0w2.mo\
Instances/Calibration/gn11e20d5w0w20.mo\
Instances/Calibration/gn11e20d5w0w2_INT.txt\
Instances/Calibration/gn11e20d5w0w2_RAT.txt\
Instances/Calibration/gn11e20d5w0w5.mo\
Instances/Calibration/gn11e20d5w0w5_INT.txt\
Instances/Calibration/gn11e20d5w0w5_RAT.txt\
Instances/Calibration/gn11e27\
Instances/Calibration/gn11e27d2w0w100.mo\
Instances/Calibration/gn11e27d2w0w1000.mo\
Instances/Calibration/gn11e27d2w0w1000_INT.txt\
Instances/Calibration/gn11e27d2w0w1000_RAT.txt\
Instances/Calibration/gn11e27d2w0w100_INT.txt\
Instances/Calibration/gn11e27d2w0w100_RAT.txt\
Instances/Calibration/gn11e27d2w0w20.mo\
Instances/Calibration/gn11e27d2w0w20_INT.txt\
Instances/Calibration/gn11e27d2w0w20_RAT.txt\
Instances/Calibration/gn11e27d3w0w100.mo\
Instances/Calibration/gn11e27d3w0w1000.mo\
Instances/Calibration/gn11e27d3w0w1000_INT.txt\
Instances/Calibration/gn11e27d3w0w1000_RAT.txt\
Instances/Calibration/gn11e27d3w0w100_INT.txt\
Instances/Calibration/gn11e27d3w0w100_RAT.txt\
Instances/Calibration/gn11e27d3w0w20.mo\
Instances/Calibration/gn11e27d3w0w20_INT.txt\
Instances/Calibration/gn11e27d3w0w20_RAT.txt\
Instances/Calibration/gn11e27d5w0w1.mo\
Instances/Calibration/gn11e27d5w0w10.mo\
Instances/Calibration/gn11e27d5w0w100.mo\
Instances/Calibration/gn11e27d5w0w1000.mo\
Instances/Calibration/gn11e27d5w0w1_INT.txt\
Instances/Calibration/gn11e27d5w0w1_RAT.txt\
Instances/Calibration/gn11e27d5w0w2.mo\
Instances/Calibration/gn11e27d5w0w20.mo\
Instances/Calibration/gn11e27d5w0w2_INT.txt\
Instances/Calibration/gn11e27d5w0w2_RAT.txt\
Instances/Calibration/gn11e27d5w0w5.mo\
Instances/Calibration/gn11e27d5w0w5_INT.txt\
Instances/Calibration/gn11e27d5w0w5_RAT.txt\
Instances/Calibration/gn11e41\
Instances/Calibration/gn11e41d2w0w100.mo\
Instances/Calibration/gn11e41d2w0w1000.mo\
Instances/Calibration/gn11e41d2w0w1000_INT.txt\
Instances/Calibration/gn11e41d2w0w1000_RAT.txt\
Instances/Calibration/gn11e41d2w0w100_INT.txt\
Instances/Calibration/gn11e41d2w0w100_RAT.txt\
Instances/Calibration/gn11e41d2w0w20.mo\
Instances/Calibration/gn11e41d2w0w20_INT.txt\
Instances/Calibration/gn11e41d2w0w20_RAT.txt\
Instances/Calibration/gn11e41d3w0w100.mo\
Instances/Calibration/gn11e41d3w0w1000.mo\
Instances/Calibration/gn11e41d3w0w1000_INT.txt\
Instances/Calibration/gn11e41d3w0w1000_RAT.txt\
Instances/Calibration/gn11e41d3w0w100_INT.txt\
Instances/Calibration/gn11e41d3w0w100_RAT.txt\
Instances/Calibration/gn11e41d3w0w20.mo\
Instances/Calibration/gn11e41d3w0w20_INT.txt\
Instances/Calibration/gn11e41d3w0w20_RAT.txt\
Instances/Calibration/gn11e41d5w0w1.mo\
Instances/Calibration/gn11e41d5w0w10.mo\
Instances/Calibration/gn11e41d5w0w100.mo\
Instances/Calibration/gn11e41d5w0w1000.mo\
Instances/Calibration/gn11e41d5w0w1_INT.txt\
Instances/Calibration/gn11e41d5w0w1_RAT.txt\
Instances/Calibration/gn11e41d5w0w2.mo\
Instances/Calibration/gn11e41d5w0w20.mo\
Instances/Calibration/gn11e41d5w0w2_INT.txt\
Instances/Calibration/gn11e41d5w0w2_RAT.txt\
Instances/Calibration/gn11e41d5w0w5.mo\
Instances/Calibration/gn11e41d5w0w5_INT.txt\
Instances/Calibration/gn11e41d5w0w5_RAT.txt\
Instances/Calibration/gn12e16\
Instances/Calibration/gn12e16d2w0w100.mo\
Instances/Calibration/gn12e16d2w0w1000.mo\
Instances/Calibration/gn12e16d2w0w1000_INT.txt\
Instances/Calibration/gn12e16d2w0w1000_RAT.txt\
Instances/Calibration/gn12e16d2w0w100_INT.txt\
Instances/Calibration/gn12e16d2w0w100_RAT.txt\
Instances/Calibration/gn12e16d2w0w20.mo\
Instances/Calibration/gn12e16d2w0w20_INT.txt\
Instances/Calibration/gn12e16d2w0w20_RAT.txt\
Instances/Calibration/gn12e16d3w0w100.mo\
Instances/Calibration/gn12e16d3w0w1000.mo\
Instances/Calibration/gn12e16d3w0w1000_INT.txt\
Instances/Calibration/gn12e16d3w0w1000_RAT.txt\
Instances/Calibration/gn12e16d3w0w100_INT.txt\
Instances/Calibration/gn12e16d3w0w100_RAT.txt\
Instances/Calibration/gn12e16d3w0w20.mo\
Instances/Calibration/gn12e16d3w0w20_INT.txt\
Instances/Calibration/gn12e16d3w0w20_RAT.txt\
Instances/Calibration/gn12e16d5w0w1.mo\
Instances/Calibration/gn12e16d5w0w10.mo\
Instances/Calibration/gn12e16d5w0w100.mo\
Instances/Calibration/gn12e16d5w0w1000.mo\
Instances/Calibration/gn12e16d5w0w1_INT.txt\
Instances/Calibration/gn12e16d5w0w1_RAT.txt\
Instances/Calibration/gn12e16d5w0w2.mo\
Instances/Calibration/gn12e16d5w0w20.mo\
Instances/Calibration/gn12e16d5w0w2_INT.txt\
Instances/Calibration/gn12e16d5w0w2_RAT.txt\
Instances/Calibration/gn12e16d5w0w5.mo\
Instances/Calibration/gn12e16d5w0w5_INT.txt\
Instances/Calibration/gn12e16d5w0w5_RAT.txt\
Instances/Calibration/gn12e24\
Instances/Calibration/gn12e24d2w0w100.mo\
Instances/Calibration/gn12e24d2w0w1000.mo\
Instances/Calibration/gn12e24d2w0w1000_INT.txt\
Instances/Calibration/gn12e24d2w0w1000_RAT.txt\
Instances/Calibration/gn12e24d2w0w100_INT.txt\
Instances/Calibration/gn12e24d2w0w100_RAT.txt\
Instances/Calibration/gn12e24d2w0w20.mo\
Instances/Calibration/gn12e24d2w0w20_INT.txt\
Instances/Calibration/gn12e24d2w0w20_RAT.txt\
Instances/Calibration/gn12e24d3w0w100.mo\
Instances/Calibration/gn12e24d3w0w1000.mo\
Instances/Calibration/gn12e24d3w0w1000_INT.txt\
Instances/Calibration/gn12e24d3w0w1000_RAT.txt\
Instances/Calibration/gn12e24d3w0w100_INT.txt\
Instances/Calibration/gn12e24d3w0w100_RAT.txt\
Instances/Calibration/gn12e24d3w0w20.mo\
Instances/Calibration/gn12e24d3w0w20_INT.txt\
Instances/Calibration/gn12e24d3w0w20_RAT.txt\
Instances/Calibration/gn12e24d5w0w1.mo\
Instances/Calibration/gn12e24d5w0w10.mo\
Instances/Calibration/gn12e24d5w0w100.mo\
Instances/Calibration/gn12e24d5w0w1000.mo\
Instances/Calibration/gn12e24d5w0w1_INT.txt\
Instances/Calibration/gn12e24d5w0w1_RAT.txt\
Instances/Calibration/gn12e24d5w0w2.mo\
Instances/Calibration/gn12e24d5w0w20.mo\
Instances/Calibration/gn12e24d5w0w2_INT.txt\
Instances/Calibration/gn12e24d5w0w2_RAT.txt\
Instances/Calibration/gn12e24d5w0w5.mo\
Instances/Calibration/gn12e24d5w0w5_INT.txt\
Instances/Calibration/gn12e24d5w0w5_RAT.txt\
Instances/Calibration/gn12e33\
Instances/Calibration/gn12e33d2w0w100.mo\
Instances/Calibration/gn12e33d2w0w1000.mo\
Instances/Calibration/gn12e33d2w0w1000_INT.txt\
Instances/Calibration/gn12e33d2w0w1000_RAT.txt\
Instances/Calibration/gn12e33d2w0w100_INT.txt\
Instances/Calibration/gn12e33d2w0w100_RAT.txt\
Instances/Calibration/gn12e33d2w0w20.mo\
Instances/Calibration/gn12e33d2w0w20_INT.txt\
Instances/Calibration/gn12e33d2w0w20_RAT.txt\
Instances/Calibration/gn12e33d3w0w100.mo\
Instances/Calibration/gn12e33d3w0w1000.mo\
Instances/Calibration/gn12e33d3w0w1000_INT.txt\
Instances/Calibration/gn12e33d3w0w1000_RAT.txt\
Instances/Calibration/gn12e33d3w0w100_INT.txt\
Instances/Calibration/gn12e33d3w0w100_RAT.txt\
Instances/Calibration/gn12e33d3w0w20.mo\
Instances/Calibration/gn12e33d3w0w20_INT.txt\
Instances/Calibration/gn12e33d3w0w20_RAT.txt\
Instances/Calibration/gn12e33d5w0w1.mo\
Instances/Calibration/gn12e33d5w0w10.mo\
Instances/Calibration/gn12e33d5w0w100.mo\
Instances/Calibration/gn12e33d5w0w1000.mo\
Instances/Calibration/gn12e33d5w0w1_INT.txt\
Instances/Calibration/gn12e33d5w0w1_RAT.txt\
Instances/Calibration/gn12e33d5w0w2.mo\
Instances/Calibration/gn12e33d5w0w20.mo\
Instances/Calibration/gn12e33d5w0w2_INT.txt\
Instances/Calibration/gn12e33d5w0w2_RAT.txt\
Instances/Calibration/gn12e33d5w0w5.mo\
Instances/Calibration/gn12e33d5w0w5_INT.txt\
Instances/Calibration/gn12e33d5w0w5_RAT.txt\
Instances/Calibration/gn13e19\
Instances/Calibration/gn13e19d2w0w100.mo\
Instances/Calibration/gn13e19d2w0w1000.mo\
Instances/Calibration/gn13e19d2w0w1000_INT.txt\
Instances/Calibration/gn13e19d2w0w1000_RAT.txt\
Instances/Calibration/gn13e19d2w0w100_INT.txt\
Instances/Calibration/gn13e19d2w0w100_RAT.txt\
Instances/Calibration/gn13e19d2w0w20.mo\
Instances/Calibration/gn13e19d2w0w20_INT.txt\
Instances/Calibration/gn13e19d2w0w20_RAT.txt\
Instances/Calibration/gn13e19d3w0w100.mo\
Instances/Calibration/gn13e19d3w0w1000.mo\
Instances/Calibration/gn13e19d3w0w1000_INT.txt\
Instances/Calibration/gn13e19d3w0w1000_RAT.txt\
Instances/Calibration/gn13e19d3w0w100_INT.txt\
Instances/Calibration/gn13e19d3w0w100_RAT.txt\
Instances/Calibration/gn13e19d3w0w20.mo\
Instances/Calibration/gn13e19d3w0w20_INT.txt\
Instances/Calibration/gn13e19d3w0w20_RAT.txt\
Instances/Calibration/gn13e19d5w0w1.mo\
Instances/Calibration/gn13e19d5w0w10.mo\
Instances/Calibration/gn13e19d5w0w100.mo\
Instances/Calibration/gn13e19d5w0w1000.mo\
Instances/Calibration/gn13e19d5w0w1_INT.txt\
Instances/Calibration/gn13e19d5w0w1_RAT.txt\
Instances/Calibration/gn13e19d5w0w2.mo\
Instances/Calibration/gn13e19d5w0w20.mo\
Instances/Calibration/gn13e19d5w0w2_INT.txt\
Instances/Calibration/gn13e19d5w0w2_RAT.txt\
Instances/Calibration/gn13e19d5w0w5.mo\
Instances/Calibration/gn13e19d5w0w5_INT.txt\
Instances/Calibration/gn13e19d5w0w5_RAT.txt\
Instances/Calibration/gn13e29\
Instances/Calibration/gn13e29d2w0w100.mo\
Instances/Calibration/gn13e29d2w0w1000.mo\
Instances/Calibration/gn13e29d2w0w1000_INT.txt\
Instances/Calibration/gn13e29d2w0w1000_RAT.txt\
Instances/Calibration/gn13e29d2w0w100_INT.txt\
Instances/Calibration/gn13e29d2w0w100_RAT.txt\
Instances/Calibration/gn13e29d2w0w20.mo\
Instances/Calibration/gn13e29d2w0w20_INT.txt\
Instances/Calibration/gn13e29d2w0w20_RAT.txt\
Instances/Calibration/gn13e29d3w0w100.mo\
Instances/Calibration/gn13e29d3w0w1000.mo\
Instances/Calibration/gn13e29d3w0w1000_INT.txt\
Instances/Calibration/gn13e29d3w0w1000_RAT.txt\
Instances/Calibration/gn13e29d3w0w100_INT.txt\
Instances/Calibration/gn13e29d3w0w100_RAT.txt\
Instances/Calibration/gn13e29d3w0w20.mo\
Instances/Calibration/gn13e29d3w0w20_INT.txt\
Instances/Calibration/gn13e29d3w0w20_RAT.txt\
Instances/Calibration/gn13e29d5w0w1.mo\
Instances/Calibration/gn13e29d5w0w10.mo\
Instances/Calibration/gn13e29d5w0w100.mo\
Instances/Calibration/gn13e29d5w0w1000.mo\
Instances/Calibration/gn13e29d5w0w1_INT.txt\
Instances/Calibration/gn13e29d5w0w1_RAT.txt\
Instances/Calibration/gn13e29d5w0w2.mo\
Instances/Calibration/gn13e29d5w0w20.mo\
Instances/Calibration/gn13e29d5w0w2_INT.txt\
Instances/Calibration/gn13e29d5w0w2_RAT.txt\
Instances/Calibration/gn13e29d5w0w5.mo\
Instances/Calibration/gn13e29d5w0w5_INT.txt\
Instances/Calibration/gn13e29d5w0w5_RAT.txt\
Instances/Calibration/gn13e39\
Instances/Calibration/gn13e39d2w0w100.mo\
Instances/Calibration/gn13e39d2w0w1000.mo\
Instances/Calibration/gn13e39d2w0w1000_INT.txt\
Instances/Calibration/gn13e39d2w0w1000_RAT.txt\
Instances/Calibration/gn13e39d2w0w100_INT.txt\
Instances/Calibration/gn13e39d2w0w100_RAT.txt\
Instances/Calibration/gn13e39d2w0w20.mo\
Instances/Calibration/gn13e39d2w0w20_INT.txt\
Instances/Calibration/gn13e39d2w0w20_RAT.txt\
Instances/Calibration/gn13e39d3w0w100.mo\
Instances/Calibration/gn13e39d3w0w1000.mo\
Instances/Calibration/gn13e39d3w0w1000_INT.txt\
Instances/Calibration/gn13e39d3w0w1000_RAT.txt\
Instances/Calibration/gn13e39d3w0w100_INT.txt\
Instances/Calibration/gn13e39d3w0w100_RAT.txt\
Instances/Calibration/gn13e39d3w0w20.mo\
Instances/Calibration/gn13e39d3w0w20_INT.txt\
Instances/Calibration/gn13e39d3w0w20_RAT.txt\
Instances/Calibration/gn13e39d5w0w1.mo\
Instances/Calibration/gn13e39d5w0w10.mo\
Instances/Calibration/gn13e39d5w0w100.mo\
Instances/Calibration/gn13e39d5w0w1000.mo\
Instances/Calibration/gn13e39d5w0w1_INT.txt\
Instances/Calibration/gn13e39d5w0w1_RAT.txt\
Instances/Calibration/gn13e39d5w0w2.mo\
Instances/Calibration/gn13e39d5w0w20.mo\
Instances/Calibration/gn13e39d5w0w2_INT.txt\
Instances/Calibration/gn13e39d5w0w2_RAT.txt\
Instances/Calibration/gn13e39d5w0w5.mo\
Instances/Calibration/gn13e39d5w0w5_INT.txt\
Instances/Calibration/gn13e39d5w0w5_RAT.txt\
Instances/Calibration/gn9e18\
Instances/Calibration/gn9e18d2w0w100.mo\
Instances/Calibration/gn9e18d2w0w1000.mo\
Instances/Calibration/gn9e18d2w0w1000_INT.txt\
Instances/Calibration/gn9e18d2w0w1000_RAT.txt\
Instances/Calibration/gn9e18d2w0w100_INT.txt\
Instances/Calibration/gn9e18d2w0w100_RAT.txt\
Instances/Calibration/gn9e18d2w0w20.mo\
Instances/Calibration/gn9e18d2w0w20_INT.txt\
Instances/Calibration/gn9e18d2w0w20_RAT.txt\
Instances/Calibration/gn9e18d3w0w100.mo\
Instances/Calibration/gn9e18d3w0w1000.mo\
Instances/Calibration/gn9e18d3w0w1000_INT.txt\
Instances/Calibration/gn9e18d3w0w1000_RAT.txt\
Instances/Calibration/gn9e18d3w0w100_INT.txt\
Instances/Calibration/gn9e18d3w0w100_RAT.txt\
Instances/Calibration/gn9e18d3w0w20.mo\
Instances/Calibration/gn9e18d3w0w20_INT.txt\
Instances/Calibration/gn9e18d3w0w20_RAT.txt\
Instances/Calibration/gn9e18d5w0w1.mo\
Instances/Calibration/gn9e18d5w0w10.mo\
Instances/Calibration/gn9e18d5w0w100.mo\
Instances/Calibration/gn9e18d5w0w1000.mo\
Instances/Calibration/gn9e18d5w0w1_INT.txt\
Instances/Calibration/gn9e18d5w0w1_RAT.txt\
Instances/Calibration/gn9e18d5w0w2.mo\
Instances/Calibration/gn9e18d5w0w20.mo\
Instances/Calibration/gn9e18d5w0w2_INT.txt\
Instances/Calibration/gn9e18d5w0w2_RAT.txt\
Instances/Calibration/gn9e18d5w0w5.mo\
Instances/Calibration/gn9e18d5w0w5_INT.txt\
Instances/Calibration/gn9e18d5w0w5_RAT.txt\
Instances/Calibration/gn9e27\
Instances/Calibration/gn9e27d2w0w100.mo\
Instances/Calibration/gn9e27d2w0w1000.mo\
Instances/Calibration/gn9e27d2w0w1000_INT.txt\
Instances/Calibration/gn9e27d2w0w1000_RAT.txt\
Instances/Calibration/gn9e27d2w0w100_INT.txt\
Instances/Calibration/gn9e27d2w0w100_RAT.txt\
Instances/Calibration/gn9e27d2w0w20.mo\
Instances/Calibration/gn9e27d2w0w20_INT.txt\
Instances/Calibration/gn9e27d2w0w20_RAT.txt\
Instances/Calibration/gn9e27d3w0w100.mo\
Instances/Calibration/gn9e27d3w0w1000.mo\
Instances/Calibration/gn9e27d3w0w1000_INT.txt\
Instances/Calibration/gn9e27d3w0w1000_RAT.txt\
Instances/Calibration/gn9e27d3w0w100_INT.txt\
Instances/Calibration/gn9e27d3w0w100_RAT.txt\
Instances/Calibration/gn9e27d3w0w20.mo\
Instances/Calibration/gn9e27d3w0w20_INT.txt\
Instances/Calibration/gn9e27d3w0w20_RAT.txt\
Instances/Calibration/gn9e27d5w0w1.mo\
Instances/Calibration/gn9e27d5w0w10.mo\
Instances/Calibration/gn9e27d5w0w100.mo\
Instances/Calibration/gn9e27d5w0w1000.mo\
Instances/Calibration/gn9e27d5w0w1_INT.txt\
Instances/Calibration/gn9e27d5w0w1_RAT.txt\
Instances/Calibration/gn9e27d5w0w2.mo\
Instances/Calibration/gn9e27d5w0w20.mo\
Instances/Calibration/gn9e27d5w0w2_INT.txt\
Instances/Calibration/gn9e27d5w0w2_RAT.txt\
Instances/Calibration/gn9e27d5w0w5.mo\
Instances/Calibration/gn9e27d5w0w5_INT.txt\
Instances/Calibration/gn9e27d5w0w5_RAT.txt\
Instances/ExperimentalDesign/P_20_2_4_Beta_2_9_l.mo\
Instances/ExperimentalDesign/P_28_2_5_Beta_2_9_l.mo\
Instances/ExperimentalDesign/README\
Instances/Solids/Solid-cube\
Instances/Solids/Solid-cube-d2w0w100.mo\
Instances/Solids/Solid-cube-d2w0w1000.mo\
Instances/Solids/Solid-cube-d2w0w20.mo\
Instances/Solids/Solid-cube-d3w0w100.mo\
Instances/Solids/Solid-cube-d3w0w1000.mo\
Instances/Solids/Solid-cube-d3w0w20.mo\
Instances/Solids/Solid-cuboctahedron\
Instances/Solids/Solid-cuboctahedron-d2w0w100.mo\
Instances/Solids/Solid-cuboctahedron-d2w0w1000.mo\
Instances/Solids/Solid-cuboctahedron-d2w0w20.mo\
Instances/Solids/Solid-cuboctahedron-d3w0w100.mo\
Instances/Solids/Solid-cuboctahedron-d3w0w1000.mo\
Instances/Solids/Solid-cuboctahedron-d3w0w20.mo\
Instances/Solids/Solid-dodecahedron\
Instances/Solids/Solid-dodecahedron-d2w0w100.mo\
Instances/Solids/Solid-dodecahedron-d2w0w1000.mo\
Instances/Solids/Solid-dodecahedron-d2w0w20.mo\
Instances/Solids/Solid-dodecahedron-d3w0w100.mo\
Instances/Solids/Solid-dodecahedron-d3w0w1000.mo\
Instances/Solids/Solid-dodecahedron-d3w0w20.mo\
Instances/Solids/Solid-grhombicuboctahedron\
Instances/Solids/Solid-grhombicuboctahedron-d2w0w100.mo\
Instances/Solids/Solid-grhombicuboctahedron-d2w0w1000.mo\
Instances/Solids/Solid-grhombicuboctahedron-d2w0w20.mo\
Instances/Solids/Solid-grhombicuboctahedron-d3w0w100.mo\
Instances/Solids/Solid-grhombicuboctahedron-d3w0w1000.mo\
Instances/Solids/Solid-grhombicuboctahedron-d3w0w20.mo\
Instances/Solids/Solid-icosahedron\
Instances/Solids/Solid-icosahedron-d2w0w100.mo\
Instances/Solids/Solid-icosahedron-d2w0w1000.mo\
Instances/Solids/Solid-icosahedron-d2w0w20.mo\
Instances/Solids/Solid-icosahedron-d3w0w100.mo\
Instances/Solids/Solid-icosahedron-d3w0w1000.mo\
Instances/Solids/Solid-icosahedron-d3w0w20.mo\
Instances/Solids/Solid-icosidodecahedron\
Instances/Solids/Solid-icosidodecahedron-d2w0w100.mo\
Instances/Solids/Solid-icosidodecahedron-d2w0w1000.mo\
Instances/Solids/Solid-icosidodecahedron-d2w0w20.mo\
Instances/Solids/Solid-icosidodecahedron-d3w0w100.mo\
Instances/Solids/Solid-icosidodecahedron-d3w0w1000.mo\
Instances/Solids/Solid-icosidodecahedron-d3w0w20.mo\
Instances/Solids/Solid-octahedron\
Instances/Solids/Solid-octahedron-d2w0w100.mo\
Instances/Solids/Solid-octahedron-d2w0w1000.mo\
Instances/Solids/Solid-octahedron-d2w0w20.mo\
Instances/Solids/Solid-octahedron-d3w0w100.mo\
Instances/Solids/Solid-octahedron-d3w0w1000.mo\
Instances/Solids/Solid-octahedron-d3w0w20.mo\
Instances/Solids/Solid-rhombicosidodecahedron\
Instances/Solids/Solid-rhombicosidodecahedron-d2w0w100.mo\
Instances/Solids/Solid-rhombicosidodecahedron-d2w0w1000.mo\
Instances/Solids/Solid-rhombicosidodecahedron-d2w0w20.mo\
Instances/Solids/Solid-rhombicosidodecahedron-d3w0w100.mo\
Instances/Solids/Solid-rhombicosidodecahedron-d3w0w1000.mo\
Instances/Solids/Solid-rhombicosidodecahedron-d3w0w20.mo\
Instances/Solids/Solid-snubcube\
Instances/Solids/Solid-snubcube-d2w0w100.mo\
Instances/Solids/Solid-snubcube-d2w0w1000.mo\
Instances/Solids/Solid-snubcube-d2w0w20.mo\
Instances/Solids/Solid-snubcube-d3w0w100.mo\
Instances/Solids/Solid-snubcube-d3w0w1000.mo\
Instances/Solids/Solid-snubcube-d3w0w20.mo\
Instances/Solids/Solid-snubdodecahedron\
Instances/Solids/Solid-snubdodecahedron-d2w0w100.mo\
Instances/Solids/Solid-snubdodecahedron-d2w0w1000.mo\
Instances/Solids/Solid-snubdodecahedron-d2w0w20.mo\
Instances/Solids/Solid-snubdodecahedron-d3w0w100.mo\
Instances/Solids/Solid-snubdodecahedron-d3w0w1000.mo\
Instances/Solids/Solid-snubdodecahedron-d3w0w20.mo\
Instances/Solids/Solid-srhombicuboctahedron\
Instances/Solids/Solid-srhombicuboctahedron-d2w0w100.mo\
Instances/Solids/Solid-srhombicuboctahedron-d2w0w1000.mo\
Instances/Solids/Solid-srhombicuboctahedron-d2w0w20.mo\
Instances/Solids/Solid-srhombicuboctahedron-d3w0w100.mo\
Instances/Solids/Solid-srhombicuboctahedron-d3w0w1000.mo\
Instances/Solids/Solid-srhombicuboctahedron-d3w0w20.mo\
Instances/Solids/Solid-tetrahedron\
Instances/Solids/Solid-tetrahedron-d2w0w100.mo\
Instances/Solids/Solid-tetrahedron-d2w0w1000.mo\
Instances/Solids/Solid-tetrahedron-d2w0w20.mo\
Instances/Solids/Solid-tetrahedron-d3w0w100.mo\
Instances/Solids/Solid-tetrahedron-d3w0w1000.mo\
Instances/Solids/Solid-tetrahedron-d3w0w20.mo\
Instances/Solids/Solid-truncatedicosahedron\
Instances/Solids/Solid-truncatedicosahedron-d2w0w100.mo\
Instances/Solids/Solid-truncatedicosahedron-d2w0w1000.mo\
Instances/Solids/Solid-truncatedicosahedron-d2w0w20.mo\
Instances/Solids/Solid-truncatedicosahedron-d3w0w100.mo\
Instances/Solids/Solid-truncatedicosahedron-d3w0w1000.mo\
Instances/Solids/Solid-truncatedicosahedron-d3w0w20.mo\
Instances/Solids/Solid-truncatedoctahedron\
Instances/Solids/Solid-truncatedoctahedron-d2w0w100.mo\
Instances/Solids/Solid-truncatedoctahedron-d2w0w1000.mo\
Instances/Solids/Solid-truncatedoctahedron-d2w0w20.mo\
Instances/Solids/Solid-truncatedoctahedron-d3w0w100.mo\
Instances/Solids/Solid-truncatedoctahedron-d3w0w1000.mo\
Instances/Solids/Solid-truncatedoctahedron-d3w0w20.mo\
Instances/Solids/Solid-truncatedtetrahedron\
Instances/Solids/Solid-truncatedtetrahedron-d2w0w100.mo\
Instances/Solids/Solid-truncatedtetrahedron-d2w0w1000.mo\
Instances/Solids/Solid-truncatedtetrahedron-d2w0w20.mo\
Instances/Solids/Solid-truncatedtetrahedron-d3w0w100.mo\
Instances/Solids/Solid-truncatedtetrahedron-d3w0w1000.mo\
Instances/Solids/Solid-truncatedtetrahedron-d3w0w20.mo\
Instances/Examples/k6.allprojectedbases.m\
Instances/Examples/k6.boundary.m\
Instances/Examples/k6.dfbfsoutput.m\
Instances/Examples/k6.graph\
Instances/Examples/k6.mo\
Instances/Examples/k6.pivottesttabusearch.m

