## $Rev: 310 $ $Date: 2009-09-19 19:57:40 -0400 (Sat, 19 Sep 2009) $
bin_PROGRAMS = genrandmo matroidtest graphtest testmatrix mvbalclust nagibatest genmatrix alltoproj point2po designtomatrix estimatebases tabusearch localsearch
genrandmo_SOURCES = genrandmo.cpp mathprog.cpp matrix.cpp graph.cpp matroid.cpp
#genrandmo_LDFLAGS = -lblas
matroidtest_SOURCES = matroidtest.cpp matrix.cpp graph.cpp matroid.cpp mathprog.cpp
#matroidtest_LDFLAGS = -lblas
graphtest_SOURCES = graphtest.cpp matrix.cpp graph.cpp
#graphtest_LDFLAGS = -lblas
testmatrix_SOURCES = testmatrix.cpp matrix.cpp
#testmatrix_LDFLAGS = -lblas
mvbalclust_SOURCES = mvbalclust.cpp mathprog.cpp matrix.cpp graph.cpp matroid.cpp 
#mvbalclust_LDFLAGS = -lblas
nagibatest_SOURCES = nagibatest.cpp graph.cpp matrix.cpp
#nagibatest_LDFLAGS = -lblas
genmatrix_SOURCES = genmatrix.cpp matrix.cpp
#genmatrix_LDFLAGS = -lblas
alltoproj_SOURCES = alltoproj.cpp matrix.cpp
#alltoproj_LDFLAGS = -lblas
point2po_SOURCES = point2po.cpp mathprog.cpp matrix.cpp graph.cpp matroid.cpp 
#point2po_LDFLAGS = -lblas
designtomatrix_SOURCES = designtomatrix.cpp matrix.cpp
#designtomatrix_LDFLAGS = -lblas
estimatebases_SOURCES = estimatebases.cpp matroid.cpp matrix.cpp graph.cpp
#estimatebases_LDFLAGS = -lblas
tabusearch_SOURCES = tabusearch.cpp matroid.cpp matrix.cpp graph.cpp mathprog.cpp
#tabusearch_LDFLAGS = -lblas
localsearch_SOURCES = localsearch.cpp matroid.cpp matrix.cpp graph.cpp mathprog.cpp
#localsearch_LDFLAGS = -lblas
EXTRA_DIST = matrix.h matroid.h graph.h mathprog.h
